--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
   reverse-proxy:
     image: nginx
     volumes:
+      - ./reverse-proxy/index.html:/etc/nginx/html/index.html
       - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf
     ports:
       - 80:80
