--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: nginx
     container_name: doc-server
     volumes:
-      - ./dog-server:/etc/nginx/html
+      - ./dog-server/index.html:/usr/share/nginx/html/index.html
     ports:
       - 7000:80
 
@@ -13,14 +13,14 @@ services:
     image: nginx
     container_name: cat-server
     volumes:
-      - ./cat-server:/etc/nginx/html
+      - ./cat-server/index.html:/usr/share/nginx/html/index.html
     ports:
       - 7001:80
 
   reverse-proxy:
     image: nginx
     volumes:
-      - ./reverse-proxy/index.html:/etc/nginx/html/index.html
-      - ./reverse-proxy/nginx.conf:/etc/nginx/nginx.conf
+      - ./reverse-proxy/my.conf:/etc/nginx/conf.d/my.conf
+      - ./reverse-proxy/index.html:/usr/share/nginx/html/index.html
     ports:
       - 80:80
